--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.PZ_CW_3_Diak_Vladyslav"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name="ua.edu.lntu.cw_3.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.PZ_CW_3_Diak_Vladyslav">
